--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -54,17 +54,23 @@
     }
 
 
-
-
     body {
-        background: url("../images/chess-background.webp");
-        background-position: center center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
         margin: 0;
         padding: 0;
         width: 100%;
+    }
+
+    .bg-image {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+        z-index: -1;
+        pointer-events: none;
+        user-select: none;
     }
 
     header {
@@ -127,10 +133,13 @@
 
     #nav-toggle .current {
         border-bottom: none;
-        background: var(--chess-green);
+        background: var(--chess-light-green);
+        padding: 1rem 0 1rem;
+        color: var(--chess-black);
+        text-decoration: none;
     }
 
-    #nav-toggle.show a {
+    #nav-toggle.show a:not(:nth-of-type(1)) {
         color: var(--chess-white);
         text-decoration: none;
         border-bottom: solid 1px var(--chess-white);
